# tavera

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  TODOS.md  pyproject.toml  tavera.db
.agents/skills/source-command-add-to-changelog-add-to-changelog/: SKILL.md
.agents/skills/source-command-clean-memory-clean-memory/: SKILL.md
.agents/skills/source-command-docs-document-architecture/: SKILL.md
.agents/skills/source-command-gh-pull-request-gh-pull-request/: SKILL.md
.agents/skills/source-command-git-commit-git-commit/: SKILL.md
alembic/: env.py
alembic/versions/: 93d1ad53d144_initial.py
app/: config.py  main.py
app/adapters/: base.py  fraser_health.py  orgbook_bc.py  vch.py
app/middleware/: api_key.py
app/models/: __init__.py
app/routes/: alerts.py  suppliers.py
app/schemas/: supplier.py
app/services/: csv_import.py  mapping.py  scoring.py  webhooks.py
design/executive_dashboard/: code.html
design/executive_intelligence/: DESIGN.md
design/generate_audit_report_preview/: code.html
design/generate_audit_report_step_1/: code.html
design/mobile_risk_alerts_feed/: code.html
design/pro_compliance_dashboard_updated/: code.html
design/supplier_detail_profile/: code.html
design/supplier_directory_search/: code.html
design/tavera_marketing_landing_page/: code.html
design/tavera_onboarding_flow/: code.html
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css
scripts/: cron_alert_pipeline.py  seed_demo_data.py
tests/: conftest.py  test_csv_import.py  test_mapping.py  test_scoring.py
(+18 files in other folders)
