[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tavera"
version = "0.1.0"
description = "Supplier Risk Intelligence — food safety monitoring platform"
readme = "PLAN.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.0",
    "rapidfuzz>=3.0.0",
    "structlog>=24.0.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
